--- a/numeric.tex
+++ b/numeric.tex
@@ -692,9 +692,10 @@ A more advantageous algorithm for recognition of oscillations is the \textit{fil
 %}}}
 \paragraph{Advantages over the scattering-parameters method}%{{{
 Using CDH resolves some of the issues of the s-parameters method, namely 
+\label{cdhadvantages}
 \begin{enumerate}
 \item{It simulates the unit cell embedded from all sides in the lattice, and there is no problem with the evanescent fields sensing free space as it was in the s-parameter method.} 
-\item{Retrieval of the dispersion curves is not much sensitive to the actual field amplitude, but rather to the frequencies detected in its ringdown. The shape of dispersion curves is less distorted by wrong field averaging.} 
+\item{Retrieval of the dispersion curves is not much sensitive to the actual field amplitude, but rather to the frequencies detected in its ringdown. The shape of dispersion curves is less distorted by any possible error during the scattered field detection.} 
 \item{Since the wavevector is given before each simulation, no issues with wrong branch detection can flip or otherwise distort the dispersion curves.} 
 \item{Also the requirements to the structure symmetry are weaker. In general, the structure is not required to have any symmetry plane perpendicular to the wavevector. Other kinds of lower symmetry may lead to bianisotropic behaviour, which would require more sophisticated detection of the waves, though.}
 \item{Last but not least, CDH in comparison with the s-parameters method inherently takes into account even a very strong spatial dispersion. All additional waves are detected correctly.}
