--- a/conclusion.tex
+++ b/conclusion.tex
@@ -32,6 +32,9 @@
 %		  (http://onlinelibrary.wiley.com/doi/10.1002/adma.201502298/full etc.)
 %         stress the importance of taking the spatial dispersion into account
 %      3) the s-parameter method, although widely used, does not always give correct results for diverse reasons
+%		  notice that e.g. 1-D PhC allows to determine Neff, but not eeff,meff, whereas
+%		  the electro-magnetic resonator exhibits independent el and mag resonances, but its Neff can not always 
+%		  be determined
 %  * illustrated the difference of the s-parameter results against supposedly more reliable CDH
 %  * provide the simulation environment which facilitates correct computations,  and solves 
 %	  1) the artifacts from the near field around the structure being recorded by the monitor planes (--reformulate)
